<resources>
    <string name="app_name">RickadnMortyKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_name_of_location_">The name of location:</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="the_name_of_location">The name of location:</string>
    <string name="the_type_of_location">The type of location:</string>
    <string name="the_name_of_dimension">The name of dimension:</string>
    <string name="series_name">Series name:</string>
    <string name="release_date">Release date:</string>
    <string name="episode_number">Episode number:</string>
    <string name="full_name">Full name:</string>
    <string name="status">Status:</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="seriess_name">Series name</string>
    <string-array name="gender_array">
        <item> male  </item>
        <item> female  </item>
        <item> genderless  </item>
        <item> unknown  </item>
    </string-array>

    <string-array name="status_array">
        <item> alive  </item>
        <item> dead  </item>
        <item> unknown  </item>
    </string-array>
</resources>