<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.locations.detaillocation.DetailLocation">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="txt_name,txt_name_desc,txt_dimension,
        txt_dimension_desc,txt_type,txt_type_desc"
        />


    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem"
        android:textStyle="italic"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/txt_name_desc"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_name_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_name_of_location"
        android:textStyle="bold"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/txt_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem"
        android:textStyle="italic"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/txt_type_desc"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_type_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_type_of_location"
        android:textStyle="bold"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/txt_dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem"
        android:textStyle="italic"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/txt_dimension_desc"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_dimension_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_name_of_dimension"
        android:textStyle="bold"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@id/txt_type"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>