<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.episodes.detailepisode.DetailEpisode">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="txt_name_desc,
        txt_name,txt_air_date,
        txt_airdate_desc,txt_episode,txt_episode_desc"
        />


    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:text="@tools:sample/lorem"
        app:layout_constraintTop_toBottomOf="@id/txt_name_desc"
        app:layout_constraintLeft_toLeftOf="parent"

        />
    <TextView
        android:id="@+id/txt_name_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/series_name"
        />
    <TextView
        android:id="@+id/txt_air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:text="@tools:sample/lorem"
        app:layout_constraintTop_toBottomOf="@id/txt_airdate_desc"
        app:layout_constraintLeft_toLeftOf="parent"

        />
    <TextView
        android:id="@+id/txt_airdate_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/release_date"
        />

    <TextView
        android:id="@+id/txt_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:text="@tools:sample/lorem"
        app:layout_constraintTop_toBottomOf="@id/txt_episode_desc"
        app:layout_constraintLeft_toLeftOf="parent"

        />
    <TextView
        android:id="@+id/txt_episode_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/txt_air_date"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/episode_number"
        />

</androidx.constraintlayout.widget.ConstraintLayout>