<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="55dp"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.characters.detailCharacter.DetailCharacter">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img_image"
            app:layout_constraintLeft_toRightOf="@id/txt_name_desc"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            tools:text="@tools:sample/lorem"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txt_name_desc"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img_image"
            app:layout_constraintLeft_toLeftOf="@id/img_image"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/full_name"
            android:textSize="19sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:id="@+id/img_image"
            android:layout_width="300dp"
            tools:src="@tools:sample/avatars"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/txt_status_desc"
            app:layout_constraintLeft_toRightOf="@id/txt_status_desc"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            tools:text="@tools:sample/lorem"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txt_status_desc"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_name_desc"
            app:layout_constraintLeft_toLeftOf="@id/txt_name_desc"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/status"
            android:textSize="19sp"

            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txt_species"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_status"
            app:layout_constraintLeft_toRightOf="@id/txt_species_desc"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            tools:text="@tools:sample/lorem"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txt_species_desc"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_status_desc"
            app:layout_constraintLeft_toLeftOf="@id/txt_status_desc"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/species"
            android:textSize="19sp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_species"
            app:layout_constraintLeft_toRightOf="@id/txt_gender_desc"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            tools:text="@tools:sample/lorem"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txt_gender_desc"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_species_desc"
            app:layout_constraintLeft_toLeftOf="@id/txt_species_desc"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/gender"
            android:textSize="19sp"
            android:layout_height="wrap_content"
            />
</androidx.constraintlayout.widget.ConstraintLayout>